# Zia

./: CMakeLists.txt  compile.sh  conanfile.txt
api/include/: Hooks.hpp  IHooks.hpp  IModule.hpp  ModuleManager.hpp  NetworkDialog.hpp  Request.hpp  RequestManager.hpp  Response.hpp
api/src/: HTTPStatus.cpp  Hooks.cpp  ModuleManager.cpp  Request.cpp  RequestManager.cpp
confFiles/: mainConf.ini  phpConf.ini
include/: apache.hpp  configuration.hpp  response.hpp  server.hpp  session.hpp  socket.hpp
modules/: CMakeLists.txt
modules/SSLModule/: CMakeLists.txt  SSLModule.cpp  SSLModule.hpp
modules/apache_module/: ApacheModule.cpp  ApacheModule.hpp  CMakeLists.txt
modules/php_module/: CMakeLists.txt  PhpModule.cpp  PhpModule.hpp  env.txt
modules/request_module/: CMakeLists.txt  RequestModule.cpp  RequestModule.hpp
modules/response_module/: CMakeLists.txt  ResponseModule.cpp  ResponseModule.hpp
src/: configuration.cpp  main_server.cpp  server.cpp  session.cpp  socket.cpp
www/: index.php
www/a/: index.html  index.php
